updated gitignore to not track the generated files from the shared-config plugin. added a task to the gruntfile to generate the shared-config files. Added a reference to App to initialize the breakpoint listener. updated config.js with matchMedia dependancy. Added the initial version of the breakpoint listener utility.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 ._.DS_Store
 .idea/*
 .tmp/
+/src/assets/scss/helpers/_sharedConfig.scss
+/src/assets/scripts/sharedConfig.js
 /docs/
 /build-reports/
 /build-env.js
